First presentable version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<div class="rosary-758-499">
+<div id='radiant-div' class="rosary-758-499" [style.scale]="scale">
   <img class="rosary-img" src="/assets/Rosary-758-499-removebg-preview.png">
-    this is the router space
   <div class="heartland">
     <router-outlet />
   </div>
