Rearrange sub-titles

--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -1,5 +1,5 @@
 <div class="prayer-container">
-  <h2>Instruction: {{currentPage?.instruction}}</h2>
+  <h3>{{currentPage?.instruction}}</h3>
   <h3 *ngIf="currentMystery != undefined">{{currentMystery.Title}}</h3>
   <h5 *ngIf="currentMystery != undefined">{{currentMystery.Meditation}}</h5>
   <h4 *ngIf="currentPage.file?.Title">{{currentPage?.file.Title}}</h4>
