pre-font-awesome

--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -1,3 +1,4 @@
+<i class="fa-solid fa-house"></i>
 <div class="prayer-container">
   <h3>{{currentPage?.instruction}}</h3>
   <h3 *ngIf="currentMystery != undefined">{{currentMystery.Title}}</h3>
