--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,10 @@
 <div class="home-container">
   <h1>Welcome to the Rosary</h1>
+  <p>Take a deep breath and prepare for your journey.
+    Press Start when ever you are ready.
+    Just follow the prompts and you'll be fine.
+    If you do not have a rosary just imagine if you did.</p>
   <button class="start-btn" (click)="router.navigate(['start-prayer'])">Start</button>
+  <i class="fa-solid fa-house"></i>
 </div>
+
