--- a/src/styles.css
+++ b/src/styles.css
@@ -12,11 +12,16 @@ body {
 }
 
 .prayer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 100%;
   height: 100%;
   text-align: center;
+  vertical-align: middle;
   padding-top: 0em;
   background: none;
+  margin: auto;
 }
 
 .rosary-758-499 {
@@ -36,9 +41,9 @@ body {
 
 .heartland {
   position: absolute;
-  width: 619px;
+  width: 650px;
   height: 244px;
-  left: 67px;
+  left: 40px;
   top: 50px;
 }
 
