--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,7 @@ body {
 .prev-btn {
   position: absolute;
   top: 300px;
-  left: -50px;
+  left: -20px;
   background: rgb(125, 222, 125);
   border: solid 2px rgb(144, 233, 144);
   border-radius: 10px;
@@ -76,10 +76,19 @@ body {
 .next-btn {
   position: absolute;
   top: 300px;
-  left: 575px;
+  left: 585px;
   background: rgb(125, 222, 125);
   border: solid 2px rgb(144, 233, 144);
   border-radius: 10px;
+  width: 5em;
+  height: 2em;
+  font-size: 14pt;
+}
+
+.home-btn {
+  position: absolute;
+  top: 307px;
+  left: 524px;
   width: 5em;
   height: 2em;
   font-size: 14pt;
