--- a/src/app/prayer-window/prayer-window.component.css
+++ b/src/app/prayer-window/prayer-window.component.css
@@ -1,1 +1,29 @@
 
+.slow-fade2 {
+  width: 30px;
+  transition: width 0.5s ease-in-out;
+  overflow: hidden;
+  /* Transition width over 0.5s with ease-in-out timing */
+}
+
+.slow-fade2:hover {
+  width: 0px;
+}
+
+.slow-fade {
+  transition: opacity 0.5s ease-in-out;
+  /* animation: fadeOut 2s forwards; */
+  /* Adjust duration as needed */
+  opacity: 0;
+  /* Initial opacity */
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
