--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -1,25 +1,25 @@
 
 <div class="prayer-container">
-  <div>
-  <h3>{{currentPage?.instruction}}</h3>
-  @if (currentMystery != undefined) {
-    <h3>{{currentMystery.Title}}</h3>
-  }
-  @if (currentMystery?.Meditation != undefined) {
-    <h4  [innerHTML]="'Meditate: ' + currentMystery.Meditation">Meditate:</h4>
-  }
-  @if (currentPage.file?.Title) {
-    <h4>{{currentPage?.file.Title}}</h4>
-  }
-  @if (currentPage.file) {
-    <p [innerHTML]="currentPage?.file.Text"></p>
-  }
+  <div style="margin: auto;">
+    <h3>{{currentPage?.instruction}}</h3>
+    @if (currentMystery != undefined) {
+      <h3>{{currentMystery.Title}}</h3>
+    }
+    @if (currentMystery?.Meditation != undefined) {
+      <h4  [innerHTML]="'Meditate: ' + currentMystery.Meditation">Meditate:</h4>
+    }
+    @if (currentPage.file?.Title) {
+      <h4>{{currentPage?.file.Title}}</h4>
+    }
+    @if (currentPage.file) {
+      <p [innerHTML]="currentPage?.file.Text"></p>
+    }
 
   </div>
   <!-- Decade: {{currentPage?.decadeIndex}}
   Mystery: {{currentPage?.mysteryIndex}} -->
 </div>
 
-<button class="prev-btn" (click)="previous($event)">Previous</button>
-<a [routerLink]="['/']" routerLinkActive="router-link-active"><i class="fa-solid fa-house home-btn"></i></a>
-<button class="next-btn" (click)="next($event)">Next</button>
+<button class="prev-btn hover-btn" (click)="previous($event)">Previous</button>
+<a [routerLink]="['/']" routerLinkActive="router-link-active"><i class="fa-solid fa-house home-btn hover-btn"></i></a>
+<button class="next-btn hover-btn" (click)="next($event)">Next</button>
