--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,5 +5,6 @@
     Just follow the prompts and you'll be fine.
     If you do not have a rosary just imagine if you did.</p>
   <button class="start-btn" (click)="router.navigate(['start-prayer'])">{{showResume ? "Resume" : "Start"}}</button>
+  <button *ngIf="showResume" class="start-btn" (click)="doReset()">Reset</button>
 </div>
 
