--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div id='radiant-div' class="rosary-758-499" [style.scale]="scale">
-  <img class="rosary-img" src="/assets/Rosary-758-499-removebg-preview.png">
-  <div class="heartland">
+<rosary-bg (nav)="nav($event)">
+<!-- <div id='radiant-div' class="rosary-758-499" [style.scale]="scale"> -->
+  <!-- <img class="rosary-img" src="/assets/Rosary-758-499-removebg-preview.png"> -->
+  <!-- <div class="heartland"> -->
     <router-outlet />
-  </div>
-</div>
+  <!-- </div> -->
+<!-- </div> -->
+</rosary-bg>
 
