--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,9 +2,14 @@
  {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   width: 100%;
   height: 100%;
   text-align: center;
   padding-top: 0em;
+
+  h1 {
+    margin: 0;
+  }
 }
 
