--- a/src/app/prayer-window/prayer-window.component.css
+++ b/src/app/prayer-window/prayer-window.component.css
@@ -1,3 +1,49 @@
+.prayer-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  width: 100%;
+  height: 100%;
+
+  padding-top: 0em;
+  background: none;
+
+
+  margin: auto;
+  vertical-align: middle;
+/*
+  @media screen and (min-width: 300px) and (max-width: 500px) and (min-height: 500px) and (max-height: 700px) {
+    p {
+      font-size: 14pt
+    }
+  }
+  @media screen and (min-width: 300px) and (max-width: 500px) and (min-height: 700px) and (max-height: 900px) {
+    p {
+      font-size: 17pt
+    }
+  }
+  @media screen and (min-width: 300px) and (max-width: 500px) and (min-height: 900px) and (max-height: 1000px) {
+    p {
+      font-size: 20pt
+    }
+  }
+  @media screen and (min-width: 500px) and (max-width: 700px) and (min-height: 900px) and (max-height: 1000px) {
+    p {
+      font-size: 60pt
+    }
+  } */
+
+/* @media screen and (min-width: 200px) and (max-width: 400px) and (min-height: 500) and (max-height: 700) {
+  p {
+    font-size: 14pt
+  }
+} */
+  p, h3, h4{
+    padding: 0px;
+    margin: 0;
+  }
+}
 
 .slow-fade2 {
   width: 30px;
