Remove debug span

--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -1,7 +1,7 @@
 
 <div class="prayer-container" [style.font-size]="fontSize">
   <!-- <div style="margin: auto;"> -->
-    <span style="font-size: 12px;">Width: {{width}} Height: {{height}} Area: {{area}}</span>
+    <!-- <span style="font-size: 12px;">Width: {{width}} Height: {{height}} Area: {{area}}</span> -->
     @if (currentPage?.instruction) {
       <h3>{{currentPage?.instruction}}</h3>
     }
