Add home button

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,14 @@
     Just follow the prompts and you'll be fine.
     If you do not have a rosary just imagine if you did.
   </p>
+  <p>
+    Once you get started, at anytime you may press the home button to come back here.<br>
+    You may also click any bead, Mary or the Crucifix to begin or resume to any location on your path.
+  </p>
   <div style="display: flex;">
-    <button class="start-btn" (click)="router.navigate(['start-prayer'])">{{showResume ? "Resume" : "Start"}}</button>
-    <button *ngIf="showResume" class="start-btn" (click)="doReset()">Reset</button>
+    <button class="start-btn" (click)="router.navigate(['start-prayer'])">Start</button>
+    <!-- <button class="start-btn" (click)="router.navigate(['start-prayer'])">{{showResume ? "Resume" : "Start"}}</button> -->
+    <!-- <button *ngIf="showResume" class="start-btn" (click)="doReset()">Reset</button> -->
   </div>
 </div>
 
