--- a/src/app/prayer-window/prayer-window.component.css
+++ b/src/app/prayer-window/prayer-window.component.css
@@ -9,9 +9,11 @@
   padding-top: 0em;
   background: none;
 
-
-  margin: auto;
+  margin-top: auto;
   vertical-align: middle;
+  justify-content: space-around;
+
+
 /*
   @media screen and (min-width: 300px) and (max-width: 500px) and (min-height: 500px) and (max-height: 700px) {
     p {
