--- a/src/app/rosary-bg/rosary-bg.component.scss
+++ b/src/app/rosary-bg/rosary-bg.component.scss
@@ -19,7 +19,8 @@
     background: none;
     border: none;
     outline: none;
-    color: white;
+    color: blue;
+    cursor: pointer;
   }
 
   [hidden] {
