--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,7 +6,8 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  padding-top: 0em;
+  margin: 1px;
+  font-size: 12px;
 
   h1 {
     margin: 0;
