--- a/src/app/prayer-window/prayer-window.component.css
+++ b/src/app/prayer-window/prayer-window.component.css
@@ -12,7 +12,7 @@
   margin-top: auto;
   vertical-align: middle;
   justify-content: space-around;
-
+  overflow:auto;
 
 /*
   @media screen and (min-width: 300px) and (max-width: 500px) and (min-height: 500px) and (max-height: 700px) {
