--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -1,5 +1,5 @@
 
-<div class="prayer-container" [style.font-size]="fontSize">
+<div #prayerContainer class="prayer-container" [style.font-size]="fontSize">
   <!-- <div style="margin: auto;"> -->
 
     <!-- <span style="font-size: 12px;">Width: {{width}} Height: {{height}} Area: {{area}}</span> -->
@@ -7,16 +7,16 @@
       <h3>{{currentPage?.instruction}}</h3>
     }
     @if (currentMystery?.Title) {
-      <h3>{{currentMystery?.Title}}</h3>
+      <h3 style="flex-grow: 1;margin-top: 4%;">{{currentMystery?.Title}}</h3>
     }
     @if (currentMystery?.Meditation != undefined) {
-      <h3 [innerHTML]="'Meditate: ' + currentMystery.Meditation">Meditate:</h3>
+      <h3 style="margin-top: 4%;" [innerHTML]="'Meditate: ' + currentMystery.Meditation">Meditate:</h3>
     }
     @if (currentPage.file?.Title) {
       <h4>{{currentPage?.file.Title}}</h4>
     }
     @if (currentPage.file) {
-      <p [innerHTML]="currentPage?.file.Text"></p>
+      <p style="flex-grow: 1;margin-top: 4%;" [innerHTML]="currentPage?.file.Text"></p>
     }
 
 </div>
