--- a/src/app/prayer-window/prayer-window.component.css
+++ b/src/app/prayer-window/prayer-window.component.css
@@ -14,6 +14,11 @@
   justify-content: space-around;
   overflow:auto;
 
+  .paragraph {
+    flex-grow: 1;
+    margin-top: 1em;
+  }
+
 /*
   @media screen and (min-width: 300px) and (max-width: 500px) and (min-height: 500px) and (max-height: 700px) {
     p {
