--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -7,16 +7,16 @@
       <h3>{{currentPage?.instruction}}</h3>
     }
     @if (currentMystery?.Title) {
-      <h3 style="flex-grow: 1;margin-top: 4%;">{{currentMystery?.Title}}</h3>
+      <h3 class="paragraph">{{currentMystery?.Title}}</h3>
     }
     @if (currentMystery?.Meditation != undefined) {
-      <h3 style="margin-top: 4%;" [innerHTML]="'Meditate: ' + currentMystery.Meditation">Meditate:</h3>
+      <h3 style="margin-top: 2em;" [innerHTML]="'Meditate: ' + currentMystery.Meditation">Meditate:</h3>
     }
     @if (currentPage.file?.Title) {
       <h4>{{currentPage?.file.Title}}</h4>
     }
     @if (currentPage.file) {
-      <p style="flex-grow: 1;margin-top: 4%;" [innerHTML]="currentPage?.file.Text"></p>
+      <p class="paragraph" [innerHTML]="currentPage?.file.Text"></p>
     }
 
 </div>
