--- a/src/app/prayer-window/prayer-window.component.css
+++ b/src/app/prayer-window/prayer-window.component.css
@@ -52,6 +52,13 @@
   }
 }
 
+.config {
+  font-size: 50px;
+  background: none;
+  border: none;
+  outline: none;
+}
+
 .slow-fade2 {
   width: 30px;
   transition: width 0.5s ease-in-out;
