--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,3 +15,40 @@
   }
 }
 
+.config {
+  font-size: 50px;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+.menu {
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 3px;
+  background: lightblue;
+  font-size: 12pt;
+}
+
+.none {
+  background: none;
+  border: none;
+  outline: none;
+}
+
+select {
+  height: 2em;
+  width: 100%;
+  border-radius: 3px;
+  border: solid 1px darkgray;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
+  background: lightblue;
+}
+
+select:focus {
+  border: solid 1px lightblue;
+  outline: solid 1px lightblue;
+}
