--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -10,7 +10,7 @@
       <h3 class="paragraph">{{currentMystery?.Title}}</h3>
     }
     @if (currentMystery?.Meditation != undefined) {
-      <h3 style="margin-top: 2em;" [innerHTML]="'Meditate: ' + currentMystery.Meditation">Meditate:</h3>
+      <h3 style="margin-top: 2em;" [innerHTML]="glossary('Meditate') + ': ' + currentMystery.Meditation">Meditate:</h3>
     }
     @if (currentPage.file?.Title) {
       <h4>{{currentPage?.file.Title}}</h4>
@@ -20,10 +20,9 @@
     }
 
 </div>
-  <!-- Decade: {{currentPage?.decadeIndex}}
-  Mystery: {{currentPage?.mysteryIndex}} -->
-<!-- </div> -->
 
-<!-- <button class="prev-btn hover-btn" (click)="previous($event)">Previous</button> -->
-
-<!-- <button class="next-btn hover-btn" (click)="next($event)">{{reset ? 'Start' : 'Next'}}</button> -->
+<ng-template #prayerOptions>
+  <a class="home-btn" [routerLink]="['/']" routerLinkActive="router-link-active" [hidden]="!rbgSvc.showButtons">
+      <i class="fa-solid fa-house"></i>
+    </a>
+</ng-template>
