--- a/src/app/rosary-bg/rosary-bg.component.scss
+++ b/src/app/rosary-bg/rosary-bg.component.scss
@@ -67,7 +67,6 @@
 }
 
 .home-btn {
-  position: absolute;
   text-align: right;
   font-size: 24px;
   border: solid 4px rgba(0, 0, 0, 0);
@@ -78,4 +77,14 @@
   padding: 4px;
   border: solid 4px rgba(0, 0, 0, 1);
   border-radius: 10px;
+}
+
+.template-area {
+  position: absolute;
+  display: flex;
+  text-align: right;
+  font-size: 24px;
+  border: solid 4px rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  width: 10%;
 }
