--- a/src/styles.css
+++ b/src/styles.css
@@ -88,3 +88,25 @@ body {
   border: solid 4px rgba(0,0,0,0);
   border-radius: 10px; */
 
+/* width */
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: pink;
+    border-radius: 5px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: lightblue;
+    border-radius: 5px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: ligntblue;
+  }
