--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <popup-template [templateOptions]="options"></popup-template>
-<div class="home-container">
+<div class="home-container" [style.fontSize]="textFontSize">
 
   <h1>{{ instructions.homeTitle }}</h1>
     <div style="overflow: auto;">
