--- a/src/app/prayer-window/prayer-window.component.html
+++ b/src/app/prayer-window/prayer-window.component.html
@@ -16,7 +16,7 @@
       <h4>{{currentPage?.file.Title}}</h4>
     }
     @if (currentPage.file) {
-      <p class="paragraph">{{currentPage.file.Text}}></p>
+      <p class="paragraph">{{currentPage.file.Text}}</p>
     }
 
 </div>
