--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,10 @@
 <popup-template [templateOptions]="options"></popup-template>
 <div class="home-container" [style.fontSize]="textFontSize">
-
-  <h1>{{ instructions.homeTitle }}</h1>
-    <div style="overflow: auto;">
-      <p [style.fontSize]="textFontSize">{{ instructions.home1 }}</p>
-      <p style="padding: 0;margin: 0;" [style.fontSize]="textFontSize">{{ instructions.home2 }}</p>
-    </div>
+  <h2>{{ instructions.homeTitle }}</h2>
+  <div style="overflow: auto;">
+    <p>{{ instructions.home1 }}</p>
+    <p style="padding-top: 1em;margin: 0;">{{ instructions.home2 }}</p>
+  </div>
 
   <button class="start-btn" (click)="router.navigate(['start-prayer'])">{{glossary("Start")}}</button>
 </div>
