--- a/src/styles.css
+++ b/src/styles.css
@@ -101,3 +101,12 @@ body {
   ::-webkit-scrollbar-thumb:hover {
     background: ligntblue;
   }
+
+    p,
+    h1,
+    h2,
+    h3,
+    h4 {
+      padding: 0px;
+      margin: 0px;
+    }
